# cookiecutter-ml-project

./: README.md
{{ cookiecutter.repo_name }}/: README.md  pyproject.toml
