[tool.poetry]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [{{ cookiecutter.author_name|tojson }}]
{% if cookiecutter.open_source_license != 'No license file' %}license = "{{ cookiecutter.open_source_license }}" {% endif %}
readme = "README.md"

[tool.poetry.dependencies]
python = "~={{ cookiecutter.python_version_number }}"
loguru = "*"
pip = "*"
python-dotenv = "*"
setuptools = "*"
typer = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mkdocs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
